[gd_scene load_steps=9 format=3 uid="uid://bbb734ncrcfag"]

[ext_resource type="Texture2D" uid="uid://c2fu4p4efjw0e" path="res://Item_Inventaire/Textures/bois.png" id="1_ldm7d"]
[ext_resource type="Texture2D" uid="uid://fvhauo6tl5ly" path="res://Item_Inventaire/Textures/pierre.png" id="2_aed4m"]
[ext_resource type="Script" uid="uid://byvubily25o5g" path="res://Scripts/animated_sprite_2d.gd" id="2_uq3c6"]
[ext_resource type="Texture2D" uid="uid://bmu130uea6acm" path="res://Item_Inventaire/Textures/viande.png" id="3_lq3jw"]
[ext_resource type="Texture2D" uid="uid://c2mwp17uhv3pv" path="res://Item_Inventaire/Textures/table_de_craft.png" id="3_vvayu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6a58q"]
atlas = ExtResource("3_vvayu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pb7qe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ldm7d")
}],
"loop": true,
"name": &"bois",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_aed4m")
}],
"loop": true,
"name": &"pierre",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lq3jw")
}],
"loop": true,
"name": &"steack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a58q")
}],
"loop": false,
"name": &"table_craft",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4air"]
size = Vector2(32, 32)

[node name="AnimatedSprite2D" type="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(159.5, 89.5)
scale = Vector2(2.4375, 2.4375)
sprite_frames = SubResource("SpriteFrames_pb7qe")
animation = &"table_craft"
script = ExtResource("2_uq3c6")

[node name="Label" type="Label" parent="."]
offset_left = 5.12821
offset_top = -16.2051
offset_right = 45.1282
offset_bottom = 6.79487

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_j4air")

[node name="Label2" type="Label" parent="."]
offset_left = -16.6154
offset_top = 7.58974
offset_right = 23.3846
offset_bottom = 30.5897
scale = Vector2(0.81619, 0.552749)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ldm7d")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
